<?xml version="1.0"?>
<package format="2">
  <name>robotont_fake_driver</name>
  <version>0.0.1</version>
  <description>The robotont_fake_driver package</description>
  <author>Veiko Vunder</author>
  <maintainer email="veiko.vunder@ut.ee">Veiko Vunder</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
    
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>tf</build_export_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>robotont_description</exec_depend>

  <export>
  </export>
</package>
